# codex

./: .gitignore  CNAME  PROJECT_MEMORY.md  README.md  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: pages.yml
_next/static/chunks/: 163-c223712e98f27f0a.js  267.79826717b0a99f08.js  29.c4dca6c74c8df837.js  29.c6e6f4ad652d689c.js  446-808a00535509562d.js  662-73a4dff76c09da75.js  889-8843dbabc8e9d6cb.js  webpack-0160fbe41ce85293.js  webpack-51a04bac770d13e4.js  webpack-d256e273ad676595.js
_next/static/css/: 1bdc139ef45546cd.css  8f00ce73c448ceb8.css  b1e015203f0f57fc.css  b62ef0a9b5d6321d.css  d0239057e1228b99.css  d9da93df6fe40923.css  db244a9ede993169.css  dee9a91946a7a121.css  e95ec3eb2dba7b90.css  eccd81843670a183.css  edfec9063edf7625.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx
src/components/: editor-shell.tsx
src/components/inspector/: layer-inspector.tsx
src/components/media/: media-gallery.test.tsx  media-gallery.tsx
src/components/preview/: preview-player.test.tsx  preview-player.tsx
src/components/timeline/: timeline-editor.tsx
src/components/toolbar/: canvas-controls.test.tsx  canvas-controls.tsx  export-panel.tsx
src/data/: sample-project.ts
src/lib/: time.ts
src/lib/canvas/: aspect-ratio.ts
src/stores/: editor-store.test.ts  editor-store.ts
src/test-utils/: editor-store.ts
src/types/: editor.ts
(+37 files in other folders)
