[package]
name = "codex-video-editor"
version = "0.1.0"
description = "Codex Video Editor desktop shell"
authors = ["mavicair2tw"]
edition = "2021"

[lib]
name = "codex_video_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
